--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.16.4",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.13",
+    "razorpay": "^2.9.6",
     "validator": "^13.15.15"
   },
   "devDependencies": {
