--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node --env-file .env ./src/app.js",
-    "dev": "nodemon --env-file .env ./src/app.js"
+    "dev": "nodemon --env-file .env ./src/app.js",
+    "ngrok": "ngrok http 3000 --authtoken '39LxDhBvtCtVNHRqb3k3Vv5cir6_4f4TycXi2BnGuYQo65mJ9'"
   },
   "author": "Kumar Naidu",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
+    "ngrok": "^5.0.0-beta.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.13",
     "razorpay": "^2.9.6",
